# BGT_2

./: .gitignore  README.md  count_words.py  main.py  pyproject.toml  tox.ini  webScrapper.py
zaj_01_20_11/: count_words.py  webScrapper.py
zaj_02_23_11/: most_popular_words.py
zaj_03_30_11/: count_words.py  count_words2.py  docker-compose.yml  loremIpsum.txt
zaj_04_04_12/: Untitled.ipynb  Untitled.py  zaj_04_12_2020.ipynb
zaj_05_07_12/: README  docker-compose.yaml  out  out2  zaj_04_12_2020.ipynb  zaj_07_12_2020.ipynb  zaj_07_12_2020_covid.ipynb
zaj_06_14_12/: .~lock.BigData - Filmy.csv#  BigData - Filmy.csv  zaj_14_12_2020.ipynb
