[tool.poetry]
name = "bgt_2"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski, Stanisław Lutkiewicz"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
pypdf2 = "^1.26.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[tool.black]
line-length = 95
exclude = '''
(
  /(
      \.eggs        
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
